fix CI issue with not Maven project

--- a/.github/workflows/ontology-e2e.yml
+++ b/.github/workflows/ontology-e2e.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           distribution: temurin
           java-version: '21'
-          cache: maven
+          # cache: maven
 
       - name: Install CLI deps
         run: |
