--- a/.github/workflows/ontology-e2e.yml
+++ b/.github/workflows/ontology-e2e.yml
@@ -44,15 +44,23 @@ jobs:
           </settings>
           XML
 
-      - name: Publish ontology (rapper path)
+      - name: Publish ontology from this branch
+        id: publish
         env:
           OUT_MANIFEST: target/published.txt
         run: |
           bash tooling/ci/publish.sh
-          test -s target/published.txt || { echo "No ontology published (branch may not contain NAME/VERSION/NAME.ttl)"; exit 0; }
-          cat target/published.txt
+          if [[ -s target/published.txt ]]; then
+            echo "has_artifacts=true" >> "$GITHUB_OUTPUT"
+            echo "Published:"
+            cat target/published.txt
+          else
+            echo "has_artifacts=false" >> "$GITHUB_OUTPUT"
+            echo "No ontology changes detected; skipping consumer checks."
+          fi
 
       - name: Create consumer project
+        if: steps.publish.outputs.has_artifacts == 'true'
         run: |
           mkdir -p consumer
           cat > consumer/pom.xml <<'POM'
@@ -94,6 +102,7 @@ jobs:
           POM
 
       - name: Add JAR dependencies for every published ontology
+        if: steps.publish.outputs.has_artifacts == 'true'
         run: |
           if [[ ! -s target/published.txt ]]; then
             echo "No published ontologies; skipping consumer config."
@@ -126,6 +135,7 @@ jobs:
           sed -n '1,200p' consumer/pom.xml
 
       - name: Build consumer & fetch ontology JARs
+        if: steps.publish.outputs.has_artifacts == 'true'
         working-directory: consumer
         run: |
             mvn -q -DskipTests package
@@ -135,6 +145,7 @@ jobs:
             done < ../target/published.txt
 
       - name: Verify TTL is inside each JAR (classpath layout)
+        if: steps.publish.outputs.has_artifacts == 'true'
         working-directory: consumer
         run: |
           sudo apt-get update >/dev/null 2>&1 || true
@@ -144,11 +155,3 @@ jobs:
               || (echo "TTL not found in ${A}-${V}.jar at META-INF/ontology/${A}.ttl" && exit 1)
           done < ../target/published.txt
 
-
-      - name: Build consumer & verify
-        working-directory: consumer
-        run: |
-          mvn -q -DskipTests package
-          while IFS=: read -r _ A _; do
-            test -f target/deps/"$A".ttl || (echo "Missing target/deps/$A.ttl" && exit 1)
-          done < ../target/published.txt
