--- a/.github/workflows/local_build.yml
+++ b/.github/workflows/local_build.yml
@@ -66,7 +66,7 @@ jobs:
             --shm-size=1g \
             -p 8081:8081 -p 8082:8082 \
             -v /tmp/arti-conf/system.yaml:/opt/jfrog/artifactory/var/etc/system.yaml:ro \
-            --add-host localhost:127.0.0.1 \   # <—— ADD THIS LINE
+            --add-host localhost:127.0.0.1 \
             -e JF_SHARED_NODE_ID="ci-node-1" \
             -e JF_ROUTER_TLS_ENABLED="false" \
             -e JF_SHARED_SECURITY_MASTERKEY="${MASTER_KEY}" \
